[project]
name = "reloop"
version = "0.1.0"
description = "Drop-in replacement for nest-asyncio. Allows nested asyncio event loops."
readme = "README.md"
license = "MIT"
authors = [
    { name = "Agentine" }
]
requires-python = ">=3.10"
dependencies = []
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Framework :: AsyncIO",
    "Typing :: Typed",
]

[project.urls]
Homepage = "https://github.com/agentine/reloop"
Repository = "https://github.com/agentine/reloop"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/reloop"]

[dependency-groups]
dev = [
    "mypy>=1.19",
    "pytest>=9.0",
    "pytest-asyncio>=0.25",
    "ruff>=0.11",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"

[tool.mypy]
strict = true
warn_return_any = true
warn_unused_configs = true
